rs/ethexe/macros-tests/tests/ui/validation_gprogram_fails_for_service_constructor_reserved_name.rs
use sails_rs::prelude::*;

#[derive(Default)]
struct MyProgram;

#[derive(Default)]
struct MyService;

#[program]
impl MyProgram {
    pub fn function(&self) -> MyService {
        MyService::default()
    }
}

#[service]
impl MyService {
    #[export]
    pub fn some_method(&self) -> bool {
        true
    }
}

fn main() {}
